[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["boyrobot <ggsky2022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.28.0"
pyautogen = "0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
